<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.LoginFragment">


    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        >

        <RelativeLayout
            android:id="@+id/loginFromApp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/login_button_background_shape"
            >

            <TextView
                android:text="@string/login_from_application"
                android:layout_centerInParent="true"
                android:id="@+id/loginFromApptextView"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:textColor="@color/colorWhite"
                android:textSize="19dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/loginFromBrowser"
            android:layout_below="@+id/loginFromApp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/login_button_background_shape"
            >

            <TextView
                android:id="@+id/loginFromBrowserTextView"
                android:text="@string/login_from_browser"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:textColor="@color/colorWhite"
                android:textSize="19dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_below="@+id/loginFromBrowser"
            android:layout_centerHorizontal="true"
            android:text="@string/don_t_forget_to_use_vpn"
            android:layout_marginLeft="20dp"
            android:textColor="@color/colorBlue"
            android:textSize="22dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>
</FrameLayout>