<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <action
        app:launchSingleTop="true"
        android:id="@+id/action_to_searchFragment"
        app:destination="@id/searchFragment"
        app:popUpTo="@id/loginFragment"
        app:popUpToInclusive="true"/>


    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.minispotify.ui.fragments.LoginFragment"
        android:label="@string/fragment_login_lable"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_searchFragment"
            app:destination="@id/searchFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.minispotify.ui.fragments.SearchFragment"
        android:label="@string/search_fragment_lable"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_trackDetailsFragment"
            app:destination="@id/trackDetailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_searchFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/searchFragment"
            app:popUpToInclusive="true" />


    </fragment>
    <fragment
        android:id="@+id/trackDetailsFragment"
        android:name="com.example.minispotify.ui.fragments.TrackDetailsFragment"
        android:label="@string/fragment_track_details_lable"
        tools:layout="@layout/fragment_track_details" >

        <argument android:name="trackItem"
            app:argType="com.example.minispotify.model.search.Item"/>
        <action
            android:id="@+id/action_trackDetailsFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/trackDetailsFragment"
            app:popUpToInclusive="true" />

    </fragment>
</navigation>